# AIAnywhere

./: .gitignore  AIAnywhere.csproj  AIAnywhere.sln  App.xaml  App.xaml.cs  Build-Release.ps1  COMPONENT_EXTRACTION_SUMMARY.md  CUSTOM_API_FIX.md  DEBUG_INSTRUCTIONS.md  MainWindow.xaml  MainWindow.xaml.cs  README.md  RELEASE_NOTES_v1.1.3.md  Setup.iss  USER_MANUAL.md  config.json  package-lock.json  package.json  project-structure.md  publish.txt
.config/: dotnet-tools.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
Models/: Configuration.cs  CustomImageSizes.cs  LLMRequest.cs  ModelsResponse.cs  Operation.cs
Services/: ConfigurationService.cs  EncryptionService.cs  EncryptionTests.cs  HotkeyService.cs  ImageService.cs  LLMService.cs  PortableEncryptionService.cs  TextProcessor.cs  TextService.cs  UIAutomationTextService.cs
Views/: AboutWindow.xaml  AboutWindow.xaml.cs  ConfigWindow.xaml  ConfigWindow.xaml.cs  ConfigWindow.xaml.cs.backup  PromptWindow.xaml  PromptWindow.xaml.cs  ReviewWindow.xaml  ReviewWindow.xaml.cs
docs/: SOFTWARE_ARCHITECTURE.md
dotnet/: .gitignore  AIAnywhere.csproj  Build-Release.ps1  MainWindow.xaml.cs  README.md  Setup.iss
dotnet/.github/: copilot-instructions.md
dotnet/.github/workflows/: release.yml
dotnet/Models/: Configuration.cs  ModelsResponse.cs
dotnet/Services/: EncryptionTests.cs  HotkeyCapture.cs  LLMService.cs  TextService.cs
dotnet/Views/: AboutWindow.xaml  AboutWindow.xaml.cs  PromptWindow.xaml.cs  ReviewWindow.xaml  ReviewWindow.xaml.cs
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/scripts/: postinstall.sh  postremove.sh
src-tauri/src/: clipboard.rs  config.rs  custom_tasks.rs  encryption.rs  history.rs  lib.rs  llm.rs  operations.rs  text.rs  wayland.rs
src-tauri/wix/: cleanup.wxs
src/components/: AboutModal.tsx  App.tsx  AudioUpload.tsx  MainLayout.tsx  MarkdownRenderer.tsx  OperationOptionsPanel.tsx  PromptWindow.tsx  ReviewModal.tsx  SettingsModal.tsx  ThemeToggle.tsx  Toast.tsx
src/components/pages/: AboutPage.tsx  CustomTasksPage.tsx  CustomTasksPage.tsx (modify)  HistoryPage.tsx  HomePage.tsx  SettingsPage.tsx  index.ts
src/components/ui/: Badge.tsx  Card.tsx  EmptyState.tsx  FormField.tsx  FormInput.tsx  FormInput.tsx (modify)  FormSelect.tsx  FormSelect.tsx (modify)  IconButton.tsx  Modal.tsx  PageLayout.tsx  SearchableSelect.tsx  SettingsToggle.tsx  SettingsToggle.tsx (modify)  index.ts
src/context/: AppContext.tsx
src/hooks/: useClipboardSync.ts  useGlobalShortcut.ts  useHotkeyCapture.ts
src/i18n/: index.tsx  translations.ts
src/types/: index.ts
src/utils/: apiErrors.ts  base64.ts
tauri/: package.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: clipboard.rs  config.rs  lib.rs  llm.rs  main.rs  operations.rs
tauri/src/components/: AboutModal.tsx  App.tsx  (+7 more)
(+7 files in other folders)
