[package]
name = "ai-anywhere"
version = "1.1.0"
description = "AI Anywhere - Universal AI Assistant"
authors = ["LABiA-FUP/UnB"]
edition = "2021"

[lib]
name = "ai_anywhere_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
futures-util = "0.3"

# Encryption
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Text processing
regex = "1"

# Image processing for clipboard
image = "0.25"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Directories for config path
dirs = "5.0"

# Platform-specific dependencies for keyboard simulation
[target.'cfg(windows)'.dependencies]
enigo = "0.2"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading"] }

[target.'cfg(target_os = "macos")'.dependencies]
enigo = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
enigo = "0.2"
